--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="contact">
       <h2>Contact Us</h2>
       <p>📞 <a href="tel:+14707395583">(470) 739-5583</a></p>
-      <p>📧 <a href="mailto:info@yourdomain.com">info@yourdomain.com</a></p>
+      <p>📧 <a href="mailto:info@yourdomain.com">contact@kabstechnology.com</a></p>
     </div>
   </main>
 
